# ChangeLog for x11-libs/qtscriptgenerator
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qtscriptgenerator/ChangeLog,v 1.15 2012/01/18 17:28:20 johu Exp $

*qtscriptgenerator-0.1.0-r2 (18 Jan 2012)

  18 Jan 2012; Johannes Huber <johu@gentoo.org>
  +qtscriptgenerator-0.1.0-r2.ebuild, -qtscriptgenerator-0.1.0-r1.ebuild:
  Revision bump. Fixes install phase, bug #399169.

*qtscriptgenerator-0.1.0-r1 (10 Jan 2012)

  10 Jan 2012; Johannes Huber <johu@gentoo.org>
  +files/qtscriptgenerator-0.1.0-qt48.patch, +qtscriptgenerator-0.1.0-r1.ebuild:
  Revision bump. EAPI 4, use qt4-r2 eclass, add fedora patch to compile with Qt
  4.8, fixes bug #397917.

  26 Mar 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  qtscriptgenerator-0.1.0.ebuild:
  Adapt phonon dependency for package move

  18 Jan 2011; Brent Baude <ranger@gentoo.org>
  qtscriptgenerator-0.1.0.ebuild:
  Marking qtscriptgenerator-0.1.0 ppc for bug 346233

  07 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  qtscriptgenerator-0.1.0.ebuild:
  Keyword ~ppc64 wrt #280552 by Andreas Thalhammer.

  23 Feb 2010; Joseph Jezak <josejx@gentoo.org>
  qtscriptgenerator-0.1.0.ebuild:
  Marked ~ppc.

  29 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  qtscriptgenerator-0.1.0.ebuild:
  stable x86, bug 290493

  26 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  qtscriptgenerator-0.1.0.ebuild:
  amd64 stable wrt #290493

  26 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  qtscriptgenerator-0.1.0.ebuild:
  Use only one job on compilation. Fixes bug 274458

  17 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  qtscriptgenerator-0.1.0.ebuild:
  Adding qt-webkit as dependency. Fixes bug 274409

  12 Jun 2009; Ben de Groot <yngwin@gentoo.org>
  qtscriptgenerator-0.1.0.ebuild,
  -files/qtscriptgenerator-0.1.0-gcc44.patch,
  +files/qtscriptgenerator-gcc44.patch:
  Use a more correct gcc-4.4 patch. Minor ebuild cleanups.
