@@ -4,18 +4,18 @@ Hash: SHA512
 AUX qtscriptgenerator-0.1.0-qt48.patch 1484 RMD160 dde7e46099b2fcc0d5308b2a8ef253d6ab192d74 SHA1 5487e2ed1ce4d35b48b3433dc5cc2a1752a03ff1 SHA256 2ba733d1820cbfc4883c0bfae63dead440e61b16fc3595bab9112f5f477d6111
 AUX qtscriptgenerator-gcc44.patch 495 RMD160 7e58d78e23aaf6e89b070941517a0db3cbc45ff4 SHA1 87cd599403fa9bb441ddc27c77e0b6242e2cc150 SHA256 6cc6825725e5746ddbf4f5f4376ce8584cb74643027a84b4eb44c10850a7205a
 DIST qtscriptgenerator-src-0.1.0.tar.gz 374223 RMD160 a02ce6fea2fbc3d3a6ae9e51c6b563ef4bcd51f3 SHA1 eeae733106369e289f257b754822bc372fd6ba75 SHA256 462ec57a65cf61228070a442299a5ecd189f80325f8246e5f98e0b8b06941f41
-EBUILD qtscriptgenerator-0.1.0-r2.ebuild 1841 RMD160 09b0bb3c3971472ce53c317da9d14eb44ae58bb1 SHA1 69136e8dcbe5c86e466873041a3df136e073621f SHA256 e9e58ea1313be5995f90a8731cf427eae9658958604047625edb3bbee4f5dc7e
-EBUILD qtscriptgenerator-0.1.0.ebuild 1782 RMD160 807d8876b3c9abd89aacfba0e987d69b53e58af5 SHA1 3ce55c505d835482b7e220b504c8d013dd171401 SHA256 42b2cba0631eada4a9ce10e4b53be399a3f572619884e5e3f49e9807a5bd9d97
-MISC ChangeLog 2792 RMD160 cba888d686d688e6000246ec1379e41aa9bce0f9 SHA1 0479ac2e9e6f51c9bc3fd643a7494241fac65b05 SHA256 93da5889f5ae25da2986e07c2e8b1c95dd52b20d3e3724c8ff57e6bbb2d3d7ea
+EBUILD qtscriptgenerator-0.1.0-r2.ebuild 1833 RMD160 b63b54340fb01f08b76f3e30fb900c5d8eaf8907 SHA1 985f225765c95f86d40d0378fe34da7fda988429 SHA256 fc12848685e4cb6aa763edb04c44d66bcc73ff6186198afae78b999a440b66d1
+EBUILD qtscriptgenerator-0.1.0.ebuild 1769 RMD160 756b5e5cdafd271997d7b8024e31f42245730063 SHA1 ed315f6cff5b1af70c15d03d480e9e541a34bd73 SHA256 d408a702e90f6ef577e676af60027104bdd5ac953113697fbc4eccf03ab1426d
+MISC ChangeLog 2953 RMD160 140426cf8e6c0f9d8c1815ca6166563fbb217207 SHA1 03e25bd58a9b4f7ebb4c8c69c792189415ec4320 SHA256 b88372eae997b3d09a09dfeef16f1424c3fc7c9b89f7d97a6e813d60fafdb62f
 MISC metadata.xml 174 RMD160 150ebb914d1d3dba874847502ec6fca3569bdd9d SHA1 069ee757d92149b01569258dd651246ae0c56e88 SHA256 24acedd614ebfee8dfa4f4bbe7729fd1b503351fb7c055fe3ff0109ef01e2a8e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPFwECAAoJEO+t9ga+3I3aZzMH/2D0pPGSMH4MDMmQNEmjU9OI
-bfwPZ1HT0cK5gU7qMEIKRx5XHq0BCWePScKmXsYQC6sFSEyufMGTLqEYbMF1zHe5
-xOrHiTdT8b0rzB7udBSkggXlsoJc7fGM7TkbifsTBTD2E/58427ux9wUe/0jfpG3
-W0Veuj7YbX4e7zXGnH2lqr1Xtqk25FTZhvgSYeagQRjv4cq+eW5K6q3eQvqPROfs
-B5LqMql/h+3FqEsGUdtfRpzqq1bg6iMa2oTtb91fgfRQTjrsMyZ0Vn/cWfFqghx1
-ifEbFWoEp60FWh0LtwgLAwPTRmp/QoY9IOYafSqeGHK4/MD8OX3F1bQnzvZxoIk=
-=45zK
+iQEcBAEBCgAGBQJPGZ9MAAoJEO+t9ga+3I3auwMH/28wMn3rtgj7DLyHi7yqn2R9
+HESmJ99SvvXYmc6+yVCz21S7ocvmjgIFhP+6RQ3xPFKb6QbsosqRgvei1XCXN39n
+bHYgCelQKdUB0yyPefqhmAjqyVdYHSCW9aaFjl3iEGchK4bwi9+ESCy9kNWotHk7
+Nq/TyH1uTR/MfIb6uHQpDMKFCA2zyzaGAJj5OvR/jVzp3676+fqAFojkdBjKzZu6
+fvUTFdSmuR7pz1XstKUt51613AtqCHb/7sx7Jg45rKO19ns2TJCRwICdKN4iZf34
+/w+a1GxR+9CIKotg0jL5KyGEAFXb3KpLZ/CqbJ3xkLRsM3GbiDp7ShhN00OHaC4=
+=BdX3
 -----END PGP SIGNATURE-----
