@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/qtscriptgenerator
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qtscriptgenerator/ChangeLog,v 1.15 2012/01/18 17:28:20 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qtscriptgenerator/ChangeLog,v 1.16 2012/01/20 17:03:44 johu Exp $
+
+  20 Jan 2012; Johannes Huber <johu@gentoo.org>
+  qtscriptgenerator-0.1.0-r2.ebuild, qtscriptgenerator-0.1.0.ebuild:
+  Reenable parallel build wrt bug #399495.
 
 *qtscriptgenerator-0.1.0-r2 (18 Jan 2012)
 
